Fix behavior of GetOriginalNameFromHashedName

This is a minimal fix for issues with getUniformBlockIndex and
getTransformFeedbackVarying. Also removes unused Shader::GetMappedName.

This corrects the behavior of GetOriginalNameFromHashedName.
Previously, uniform block names were unmapped using "name_map", but
name_map was not restored upon load. Now, instead of name_map, the five
info maps (attrib, uniform, varying, interface block, output variable)
are queried serially in GetOriginalNameFromHashedName.

Unused code around name_map will be removed in a subsequent CL.

BUG=716018
TEST=https://github.com/KhronosGroup/WebGL/pull/2388
TEST=https://github.com/KhronosGroup/WebGL/pull/2389
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.android:android_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2857083002
Cr-Commit-Position: refs/heads/master@{#469209}

Former-commit-id: 830b099d96036c04006e844f36803bf6fc23443a